--- a/YumYumDeliv/yum_deliv/templates/PlaceOrder.html
+++ b/YumYumDeliv/yum_deliv/templates/PlaceOrder.html
@@ -23,19 +23,19 @@
             <label style="text-align: center;">Подробности доставки</label>
 
             <label for="street">Улица:</label>
-            <input type="text" id="street" name="street" placeholder="Улица, Номер улицы" required>
+            <input type="text" id="street" name="street" placeholder="Улица, Номер улицы" required/>
 
             <label for="flatNumber">Квартира:</label>
-            <input type="text" id="flatNumber" name="flatNumber" placeholder="Номер Квартиры">
+            <input type="text" id="flatNumber" name="flatNumber" placeholder="Номер Квартиры"/>
 
             <label for="entrance">Подъезд:</label>
-            <input type="text" id="entrance" name="entrance" placeholder="Номер подъезда">
+            <input type="text" id="entrance" name="entrance" placeholder="Номер подъезда"/>
 
             <label for="intercom">Домофон:</label>
-            <input type="text" id="intercom" name="intercom" placeholder="Домофон">
+            <input type="text" id="intercom" name="intercom" placeholder="Домофон"/>
 
             <label for="floor">Этаж:</label>
-            <input type="text" id="floor" name="floor" placeholder="Этаж">
+            <input type="text" id="floor" name="floor" placeholder="Этаж"/>
 
             <label for="comments">Комментарий для курьера:</label>
             <textarea id="comments" name="comments"></textarea>
