--- a/YumYumDeliv/yum_deliv/static/css/homepage.css
+++ b/YumYumDeliv/yum_deliv/static/css/homepage.css
@@ -20,21 +20,12 @@ body, html {
     width: 350px;
 }
 
-.navbar-search {
+.navbar-search, .address-input {
     display: flex;
     align-items: center;
 }
 
-.text-field__input {
-    margin-right: 10px;
-}
-
-.address-input {
-    display: flex;
-    align-items: center;
-}
-
-.address-input input {
+.text-field__input, .address-input input {
     margin-right: 10px;
 }
 
@@ -132,8 +123,6 @@ a {
 }
 
 .address-input {
-    display: flex;
-    align-items: center;
     background-color: #f2f2f2;
     padding: 10px;
     border-radius: 5px;
@@ -167,10 +156,7 @@ a {
     outline: none;
 }
 
-.user-round.dropdown .dropdown-menu {
-    border-radius: 20px;
-}
-
+.user-round.dropdown .dropdown-menu,
 .user-round.dropdown .dropdown-item {
     border-radius: 20px;
 }
@@ -326,10 +312,10 @@ body {
 }
 
 .avatar {
-    position: fixed;
-    right: 0;
-    top: 0;
-    margin-top: 10px;
+    position: absolute;
+    top: 50%;
+    right: 20px; /* Подберите нужный вам правый отступ */
+    transform: translateY(-50%);
     width: 60px;
     height: 60px;
     max-height: 60px;
@@ -369,34 +355,6 @@ button {
     height: 300px;
     position: relative;
     z-index: 0;
-}
-
-.user-round.dropdown .dropdown-toggle {
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    box-shadow: none;
-}
-
-.user-round.dropdown .dropdown-toggle:focus {
-    outline: none;
-}
-
-.user-round.dropdown .dropdown-menu,
-.user-round.dropdown .dropdown-item {
-    border-radius: 20px;
-}
-
-.user-round.dropdown .dropdown-divider {
-    margin: 0;
-}
-
-.avatar-container {
-    position: relative;
-}
-
-.avatar-user {
-    max-width: 60px;
 }
 
 .menu {
@@ -575,4 +533,51 @@ button {
 
 .modal-backdrop{
     display: none;
+}
+
+/* Добавление стилей для экранов шириной до 768px */
+@media only screen and (max-width: 768px) {
+    .logo {
+        max-width: 100px;
+        height: auto;
+    }
+    .navbar-brand {
+        padding-left: 10px;
+    }
+    .search-back {
+        margin-left: 10px;
+        min-width: auto;
+        max-width: none;
+    }
+    .search-back .text-field__input {
+        width: 100%;
+    }
+    .address-input input {
+        width: 100%;
+    }
+    .avatar-user {
+        margin-right: 10px;
+    }
+}
+
+/* Добавление стилей для экранов шириной от 768px до 1200px */
+@media only screen and (min-width: 769px) and (max-width: 1200px) {
+    .logo {
+        max-width: 150px;
+        height: auto;
+    }
+    .navbar-brand {
+        padding-left: 20px;
+    }
+}
+
+/* Добавление стилей для экранов шириной более 1200px */
+@media only screen and (min-width: 1201px) {
+    .logo {
+        max-width: 200px;
+        height: auto;
+    }
+    .navbar-brand {
+        padding-left: 50px;
+    }
 }
