--- a/YumYumDeliv/yum_deliv/templates/Login.html
+++ b/YumYumDeliv/yum_deliv/templates/Login.html
@@ -18,7 +18,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <img src="../static/res/logo.png" alt="Logo">
+                        <img src="../static/res/logo.png" alt="Logo" onclick="window.location.href = '/' " style="cursor: pointer">
                     </div>
                 </div>
             </div>
