--- a/YumYumDeliv/yum_deliv/templates/RestAdmin.html
+++ b/YumYumDeliv/yum_deliv/templates/RestAdmin.html
@@ -337,7 +337,7 @@
                             <select class="js-select2 custom-select" id="status-dish_{{ order.id }}" name="status" required>
                                 <option value="Заказ оформлен" selected>Заказ оформлен</option>
                                 <option value="Сборка">Сборка</option>
-                                <option value="Сборка">Готов</option>
+                                <option value="Готов">Готов</option>
                                 <option value="Передан курьеру">Передан курьеру</option>
                             </select>
                         </div>
