--- a/YumYumDeliv/yum_deliv/templates/Сouriers.html
+++ b/YumYumDeliv/yum_deliv/templates/Сouriers.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <title>Courier Page</title>
     <style>
         body {
@@ -69,40 +76,51 @@
 
 <div class="flex-container">
     <div id="order-list">
+        <p>Список заказов</p>
         {% for order in orders %}
+        {% if order.order_status != "Выполнен" %}
         <div class="order-summary" onclick="showOrderDetails('{{ order.id }}')">
-            <p><strong>Ресторан:</strong> {{ order.restaurant }}</p>
+            <p><strong>Ресторан:</strong> {{ order.rest_name }}</p>
             <p><strong>Дата:</strong> {{ order.data_time }}</p>
             <p><strong>Статус:</strong> {{ order.order_status }}</p>
+            <p id="status" style="display: none;">{{ order.order_status }}</p>
+            <p id="courier" style="display: none;">{{ order.courier }}</p>
         </div>
+        {% endif %}
         {% endfor %}
     </div>
 
+
     {% for order in orders %}
-        <div class="order-details" data-type-order="{{ order.id }}">
-            <h2>Детали заказа</h2>
-            <p><strong>Ресторан: {{ order.restaurant }}</strong> <span class="restaurant-name"></span></p>
-            <p><strong>Дата: {{ order.data_time }}</strong> <span class="order-date"></span></p>
-            <p><strong>Статус: {{ order.order_status }}</strong> <span class="order-status"></span></p>
-            <p><strong>Адрес: {{ order.street }}, подъезд - {{ order.entrance }}, домофон - {{ order.intercom }}, этаж - {{ order.floor }}, квартира - {{ order.flat }}</strong> <span class="order-status"></span></p>
-            <p><strong>Сумма заказа: {{ order.summa }} ₽</strong> <span class="order-status"></span></p>
-            <p><strong>Вес заказа: {{ order.total_weight }} кг</strong> <span class="order-status"></span></p>
+    <div class="order-details card" data-type-order="{{ order.id }}">
+        <div class="card-body">
+            <h2 class="card-title">Детали заказа</h2>
+            <p><strong>Ресторан:</strong> {{ order.rest_name }}</p>
+            <p><strong>Адрес ресторана:</strong> {{ order.rest_address }}</p>
+            <p><strong>Дата:</strong> {{ order.data_time }}</p>
+            <p><strong>Статус:</strong> {{ order.order_status }}</p>
+            <p><strong>Адрес доставки:</strong> {{ order.street }}, подъезд - {{ order.entrance }}, домофон - {{ order.intercom }}, этаж - {{ order.floor }}, квартира - {{ order.flat }}</p>
+            <p><strong>Сумма заказа:</strong> {{ order.summa }} ₽</p>
+            <p><strong>Вес заказа:</strong> {{ order.total_weight }} кг</p>
+            {% if order.order_status == "Передан курьеру" %}
+                <button id="status_{{ order.id }}" type="button" class="btn btn-primary">Заказ выполнен</button>
+            {% endif %}
 
             <h3>Блюда заказа:</h3>
-            <div class="dish-container">
+            <div class="dish-container row">
                 {% for dish in order.dishes %}
-                    <div class="dish-item">
-                        <img src="{{ dish.photo }}" alt="{{ dish.name }} image" class="dish-photo">
-                        <p>{{ dish.name }} - {{ dish.quantity }} шт. - {{ dish.weight }} г</p>
-                    </div>
+                <div class="dish-item col-6">
+                    <img src="{{ dish.photo }}" alt="{{ dish.name }} image" class="dish-photo img-fluid">
+                    <p>{{ dish.name }} - {{ dish.quantity }} шт. - {{ dish.weight }} г</p>
+                </div>
                 {% endfor %}
             </div>
-            <button class="get_order-dtn" onclick="getOrder({{ order.id }}, '{{ uid }}')">Взять заказ</button>
+            <button id="get_order-dtn_{{ order.id }}" class="btn btn-success" onclick="getOrder({{ order.id }}, '{{ uid }}')">Взять заказ</button>
         </div>
-        {% if forloop.counter|divisibleby:2 %}
-            <div style="clear: both;"></div>
-
-        {% endif %}
+    </div>
+    {% if forloop.counter|divisibleby:2 %}
+    <div style="clear: both;"></div>
+    {% endif %}
     {% endfor %}
 </div>
 
